style: link style

--- a/styles/base.css
+++ b/styles/base.css
@@ -25,6 +25,10 @@
   kbd {
     @apply rounded-lg border border-muted/20 bg-muted/10 px-1.5 py-1 font-semibold uppercase leading-none text-subtle transition hover:bg-muted/20 focus:outline-none focus:ring;
   }
+
+  a {
+    @apply inline font-medium text-iris underline-offset-2 after:inline-block after:whitespace-pre hover:underline;
+  }
 }
 
 :root {
