--- a/styles/components.css
+++ b/styles/components.css
@@ -39,12 +39,16 @@
 
   /* Link */
   .link {
-    @apply inline font-medium text-iris no-underline underline-offset-2 transition-all duration-500 hover:underline;
+    @apply inline font-medium text-iris no-underline underline-offset-2 transition-all duration-300 hover:underline;
     @apply after:ml-0.5 after:inline-block after:whitespace-pre after:content-['→'];
   }
   .link[href^='http'],
   .link-out {
     @apply after:content-['↗'];
+  }
+  .link[href^='#'] {
+    @apply relative no-underline;
+    @apply after:absolute after:-left-6 after:text-transparent after:transition-all after:duration-300 after:content-['#'] hover:after:text-muted;
   }
 
   /* Syntax Highlighting */
