style: change photo view background color

--- a/styles/components.css
+++ b/styles/components.css
@@ -48,6 +48,11 @@
     @apply after:absolute after:-left-6 after:text-transparent after:transition-all after:duration-300 after:content-['#'] hover:after:text-muted;
   }
 
+  /* Photo View Mask */
+  .photo-view-mask {
+    @apply !bg-surface;
+  }
+
   /* Syntax Highlighting */
   pre[data-theme='dark'] {
     color-scheme: dark;
