--- a/styles/components.css
+++ b/styles/components.css
@@ -39,13 +39,17 @@
 
   /* Link */
   .link {
-    @apply inline font-medium text-iris no-underline underline-offset-2 transition-all duration-300 hover:underline;
-    @apply after:ml-0.5 after:inline-block after:whitespace-pre after:content-['↗'];
+    @apply inline text-iris no-underline underline-offset-2 hover:underline;
+    @apply after:ml-0.5 after:inline-block after:whitespace-pre after:transition-all after:duration-300 after:content-['↗'];
   }
 
   .link[href^='#'] {
     @apply relative font-bold text-text no-underline;
-    @apply after:absolute after:-left-6 after:text-transparent after:transition-all after:duration-300 after:content-['#'] hover:after:text-muted;
+    @apply after:absolute after:-left-6 after:text-muted after:opacity-0 after:content-['#'] hover:after:opacity-100;
+  }
+
+  .link-hover {
+    @apply link after:opacity-0 hover:after:opacity-100;
   }
 
   /* Photo View Mask */
