--- a/styles/base.css
+++ b/styles/base.css
@@ -3,6 +3,35 @@
 @layer base {
   :root {
     @apply scroll-smooth scrollbar-track-transparent scrollbar-thumb-muted scrollbar-thumb-rounded-lg scrollbar-w-1.5;
+
+    color-scheme: light dark;
+    --color-base: 32deg 57% 95%;
+    --color-surface: 35deg 100% 98%;
+    --color-overlay: 33deg 43% 91%;
+    --color-muted: 257deg 9% 61%;
+    --color-subtle: 248deg 12% 52%;
+    --color-text: 248deg 19% 40%;
+    --color-love: 343deg 35% 55%;
+    --color-gold: 35deg 81% 56%;
+    --color-rose: 3deg 53% 67%;
+    --color-pine: 197deg 53% 34%;
+    --color-foam: 189deg 30% 48%;
+    --color-iris: 268deg 21% 57%;
+  }
+
+  [data-theme='dark'] {
+    --color-base: 249deg 22% 12%;
+    --color-surface: 247deg 23% 15%;
+    --color-overlay: 248deg 25% 18%;
+    --color-muted: 249deg 12% 47%;
+    --color-subtle: 248deg 15% 61%;
+    --color-text: 245deg 50% 91%;
+    --color-love: 343deg 76% 68%;
+    --color-gold: 35deg 88% 72%;
+    --color-rose: 2deg 55% 83%;
+    --color-pine: 197deg 49% 38%;
+    --color-foam: 189deg 43% 73%;
+    --color-iris: 267deg 57% 78%;
   }
 
   body {
@@ -13,66 +42,17 @@
   kbd {
     @apply rounded-lg border border-muted/20 bg-muted/10 px-1.5 py-1 font-semibold uppercase leading-none text-subtle transition hover:bg-muted/20 focus:outline-none focus:ring;
   }
-}
 
-:root {
-  color-scheme: light dark;
-
-  --color-base: 32deg 57% 95%;
-  --color-surface: 35deg 100% 98%;
-  --color-overlay: 33deg 43% 91%;
-  --color-muted: 257deg 9% 61%;
-  --color-subtle: 248deg 12% 52%;
-  --color-text: 248deg 19% 40%;
-  --color-love: 343deg 35% 55%;
-  --color-gold: 35deg 81% 56%;
-  --color-rose: 3deg 53% 67%;
-  --color-pine: 197deg 53% 34%;
-  --color-foam: 189deg 30% 48%;
-  --color-iris: 268deg 21% 57%;
-}
-
-[data-theme='dark'] {
-  --color-base: 249deg 22% 12%;
-  --color-surface: 247deg 23% 15%;
-  --color-overlay: 248deg 25% 18%;
-  --color-muted: 249deg 12% 47%;
-  --color-subtle: 248deg 15% 61%;
-  --color-text: 245deg 50% 91%;
-  --color-love: 343deg 76% 68%;
-  --color-gold: 35deg 88% 72%;
-  --color-rose: 2deg 55% 83%;
-  --color-pine: 197deg 49% 38%;
-  --color-foam: 189deg 43% 73%;
-  --color-iris: 267deg 57% 78%;
-}
-
-::view-transition-new(root) {
-  animation: turnOff 600ms ease-in-out;
-}
-
-::view-transition-old(root) {
-  animation: none;
-}
-
-[data-theme='dark']::view-transition-new(root) {
-  animation: turnOn 600ms ease-in-out;
-}
-
-@keyframes turnOn {
-  0% {
-    clip-path: polygon(0% 0%, 100% 0, 100% 0, 0 0);
+  /* Theme transition */
+  ::view-transition-new(root) {
+    @apply animate-turn-off;
   }
-  100% {
-    clip-path: polygon(0% 0%, 100% 0, 100% 100%, 0 100%);
-  }
-}
 
-@keyframes turnOff {
-  0% {
-    clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+  ::view-transition-old(root) {
+    animation: none;
   }
-  100% {
-    clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
+
+  [data-theme='dark']::view-transition-new(root) {
+    @apply animate-turn-on;
   }
 }
