--- a/styles/components.css
+++ b/styles/components.css
@@ -91,4 +91,158 @@
   span[data-highlighted-line] {
     @apply border-l-2 border-muted bg-base;
   }
+
+  /*  Walk Cat */
+  /* https://codepen.io/rachelnabors/pen/ApvavZ */
+  .walk-cat {
+    animation: walk-cycle 1s steps(12) infinite;
+    background: url(/assets/cat.png) center 0 no-repeat;
+    background-size: 289px 1728px;
+    @apply h-full w-full;
+  }
+
+  @keyframes walk-cycle {
+    0% {
+      background-position: center 0;
+    }
+    100% {
+      background-position: center -1728px;
+    }
+  }
+
+  /* cute cat */
+  .cute-cat {
+    --cat-border: #ffb399;
+    --cat-bg-light: #5ddfe8;
+    --cat-bg-dark: #111;
+    --cat-sun: #ffee94;
+    --cat-moon: #eee;
+    --cat-body-light: #777;
+    --cat-body-dark: #444;
+
+    @apply relative z-10 block h-[var(--cat-size)] w-[var(--cat-size)] cursor-pointer overflow-hidden rounded-full border-[calc(var(--cat-size)*0.034)] border-[var(--cat-border)] bg-[var(--cat-bg-light)] shadow-inner transition-colors duration-1000;
+
+    .the-sun,
+    .the-moon {
+      @apply absolute block rounded-full;
+      transition: top 0.5s ease-in-out;
+    }
+
+    .the-sun {
+      @apply bg-[var(--cat-sun)];
+      width: calc(var(--cat-size) * 0.17);
+      height: calc(var(--cat-size) * 0.17);
+      top: calc(var(--cat-size) * 0.077);
+      right: calc(var(--cat-size) * 0.255);
+      box-shadow: 0 0 calc(var(--cat-size) * 0.17) var(--cat-sun);
+    }
+
+    .the-moon {
+      @apply bg-[var(--cat-moon)];
+      height: calc(var(--cat-size) * 0.102);
+      width: calc(var(--cat-size) * 0.102);
+      top: calc(var(--cat-size) * 0.851);
+      left: calc(var(--cat-size) * 0.255);
+      box-shadow: 0 0 calc(var(--cat-size) * 0.085) var(--cat-moon);
+    }
+
+    .the-cat {
+      @apply absolute block bg-[var(--cat-body-light)] transition-all duration-300;
+      bottom: calc(var(--cat-size) * -0.085);
+      height: calc(var(--cat-size) * 0.596);
+      width: calc(var(--cat-size) * 0.574);
+      margin: 0 calc(var(--cat-size) * 0.179);
+    }
+
+    .the-cat:before,
+    .the-cat:after {
+      @apply absolute h-0 w-0;
+      content: '';
+      top: calc(var(--cat-size) * -0.08);
+      border-bottom: calc(var(--cat-size) * 0.085) solid var(--cat-body-light);
+    }
+
+    .the-cat:before {
+      @apply left-0;
+      border-left: 0 solid transparent;
+      border-right: calc(var(--cat-size) * 0.128) solid transparent;
+    }
+
+    .the-cat:after {
+      @apply right-0;
+      border-right: 0 solid transparent;
+      border-left: calc(var(--cat-size) * 0.128) solid transparent;
+    }
+
+    .the-cat .eyes {
+      @apply absolute block bg-[var(--cat-sun)];
+      height: calc(var(--cat-size) * 0.17);
+      width: calc(var(--cat-size) * 0.17);
+      bottom: calc(var(--cat-size) * 0.34);
+      border-radius: 100%;
+    }
+
+    .the-cat .eyes.left {
+      left: calc(var(--cat-size) * 0.051);
+    }
+
+    .the-cat .eyes.right {
+      right: calc(var(--cat-size) * 0.051);
+    }
+
+    .the-cat .eyes .pupil {
+      @apply relative mx-auto block h-full bg-[var(--cat-border)] transition-all duration-500;
+      width: calc(var(--cat-size) * 0.021);
+      border-radius: 100%;
+    }
+
+    .the-cat .nose {
+      @apply relative mx-auto block rounded-full bg-[var(--cat-border)];
+      height: calc(var(--cat-size) * 0.043);
+      width: calc(var(--cat-size) * 0.043);
+      top: calc(var(--cat-size) * 0.191);
+    }
+
+    &:hover {
+      .the-cat {
+        bottom: calc(var(--cat-size) * -0.17);
+      }
+      .the-cat .eyes {
+        height: calc(var(--cat-size) * 0.034);
+        bottom: calc(var(--cat-size) * 0.426);
+      }
+    }
+  }
+
+  [data-theme='dark'] .cute-cat {
+    @apply bg-[var(--cat-bg-dark)];
+
+    .the-sun {
+      top: calc(var(--cat-size) * 0.851);
+    }
+
+    .the-moon {
+      top: calc(var(--cat-size) * 0.17);
+    }
+
+    .the-cat {
+      @apply bg-[var(--cat-body-dark)];
+    }
+
+    .the-cat:before,
+    .the-cat:after {
+      @apply border-b-[var(--cat-body-dark)];
+    }
+
+    .the-cat .eyes .pupil {
+      height: 90%;
+      width: calc(var(--cat-size) * 0.145);
+      margin: 5% auto;
+    }
+
+    .the-cat:hover .eyes {
+      height: calc(var(--cat-size) * 0.17);
+      bottom: calc(var(--cat-size) * 0.34);
+    }
+  }
 }
