feat: add friends

--- a/styles/components.css
+++ b/styles/components.css
@@ -68,6 +68,11 @@
     );
   }
 
+  /* Text Shadow */
+  .text-shadow {
+    text-shadow: 1px 1px 3px hsl(var(--color-text) / 0.3);
+  }
+
   /* Photo View Mask */
   .photo-view-mask {
     @apply !bg-surface;
