--- a/styles/components.css
+++ b/styles/components.css
@@ -43,7 +43,7 @@
 
   /* Link */
   .link {
-    @apply inline text-iris no-underline underline-offset-2 hover:underline;
+    @apply inline text-iris underline decoration-transparent underline-offset-2 duration-300 hover:decoration-current;
     @apply after:ml-0.5 after:inline-block after:whitespace-pre after:transition-all after:duration-300 after:content-['↗'];
   }
 
