--- a/styles/base.css
+++ b/styles/base.css
@@ -35,7 +35,7 @@
   }
 
   body {
-    @apply container !mx-auto flex min-h-screen flex-col bg-base px-4 font-sans text-text antialiased;
+    @apply container !mx-auto flex min-h-screen flex-col bg-base px-4 font-sans font-medium text-text antialiased;
     @apply selection:bg-muted/20;
   }
 
