style: remove menu button focus ring

--- a/styles/base.css
+++ b/styles/base.css
@@ -40,7 +40,7 @@
   }
 
   kbd {
-    @apply flex items-center gap-1 rounded-lg border border-muted/20 bg-muted/10 px-1.5 py-1 font-semibold uppercase leading-none text-subtle transition hover:bg-muted/20 focus:outline-none focus:ring;
+    @apply flex items-center gap-1 rounded-lg border border-muted/20 bg-muted/10 px-1.5 py-1 font-semibold uppercase leading-none text-subtle transition hover:bg-muted/20;
   }
 
   h2,
