feat: add polyglot page

--- a/styles/components.css
+++ b/styles/components.css
@@ -34,7 +34,7 @@
   }
 
   .menu-button {
-    @apply w-full p-2 data-[isactive='true']:text-text;
+    @apply w-full p-2 text-center data-[isactive='true']:text-text;
   }
 
   .tiny-button {
