--- a/styles/base.css
+++ b/styles/base.css
@@ -23,7 +23,7 @@
   }
 
   body {
-    @apply bg-base text-text container mx-auto! flex min-h-screen flex-col px-4 font-sans font-medium antialiased;
+    @apply bg-base text-text mx-auto! flex min-h-screen max-w-3xl flex-col px-4 font-sans font-medium antialiased;
     @apply selection:bg-muted/20;
   }
 
