--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -75,12 +75,15 @@
 }
 
 @utility link {
-  @apply text-iris relative inline pr-2 leading-7 underline decoration-transparent! underline-offset-2 duration-300 hover:decoration-current!;
-  @apply after:absolute after:text-xs after:whitespace-pre after:transition-all after:duration-300 after:content-['┓'];
+  @apply text-iris relative inline pr-2 underline decoration-transparent! underline-offset-2 duration-300 hover:decoration-current!;
+  @apply after:absolute after:-top-1 after:-right-0.5 after:inline-block after:h-full after:text-xs after:leading-[normal] after:whitespace-pre after:transition-all after:duration-300 after:content-['┓'];
 
   &[href^='#'] {
-    @apply text-text relative font-bold no-underline;
-    @apply after:text-muted after:-left-6 after:opacity-0 after:content-['#'] hover:after:opacity-100;
+    @apply text-text font-bold no-underline;
+    @apply after:text-muted after:top-0 after:-left-6 after:opacity-100 after:content-['#'] hover:after:opacity-100;
+    &::after {
+      font-size: inherit;
+    }
   }
 }
 
